fix: cloudfront 키 암호화 버그 수정